FIx text align in landing page

--- a/src/views/LandingPage/landingpage.module.css
+++ b/src/views/LandingPage/landingpage.module.css
@@ -15,6 +15,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  text-align: center;
   animation: scale-up-top 0.4s;
 }
 
@@ -34,6 +35,9 @@
 
 .landingText {
   font-size: 17.5px;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
   margin-top: 1em;
   animation: tracking-in-expand-forward-top 0.7s linear both;
 }
@@ -42,6 +46,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  text-align: center;
   font-size: 17.5px;
   margin-top: 1em;
   animation: tracking-in-expand-forward-bottom 0.7s linear both;
